    |\-            Added constructor ::std::Group::Group(::std::Side)
    |- Compiler:  Fixed exception when LNK0012 happens 
    |- Compiler:  Fixed external functions had to return
    |- Compiler:  Fixed variables without value get printed in function
    |- Compiler:  Fixed Fixed static functions throw LNK0051
    |- Compiler:  Fixed encapsulation call check (on private/protected)
    |- Compiler:  Fixed private functions 
    |- Compiler:  Fixed '_' in fnc name fucks up config.cpp 

Version 0.7.2-ALPHA
	|- Wrapper:   fixed Project.writeToFile(string) wrote buildfolder to
	|             srcfolder
	|- WrapperUI: fixed saving exception which prevented saving changes
	|- WrapperUI: fixed set buttons not getting disabled when loading files
    |- Compiler:  fixed issue where assignment type is not chosen correctly
    |- Compiler:  fixed member variables are "directly assigned"
    |- Compiler:  fixed member variables w/o def val being initialized using nil
    |- Compiler:  fixed missing comma printing on params for multi-arg fncs
    |- Compiler:  fixed static native functions args get messed up with printout
    |- Compiler:  fixed native functions wrappers wrong select index
    |- Compiler:  fixed void function wrappers tried to return something
    |- Compiler:  added internal script object (currently unused)
    |- Compiler:  added internal floor(<scalar>) function
    |- Compiler:  added LNK0051 exception for variable defined twice in class
    |-            and function
    |v- stdLib:   Updated ::std::Marker functions
	||-           new enum: Shape
	||-           new function: void setType(string)
	||-           new function: string getType()
	||-           new function: void setShape(Shape)
	|\-           new function: Shape getType()
	|- stdLib:    Added delete() function to ::std::Marker
	|- stdLib:    Added deleteVehicle() function to ::std::base::VehicleBase
	|- WrapperUI: WrapperUI will inform you about unsaved changes you have